{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 753,
  "lineage": "0d49d0dd-6bea-1a8f-8c2d-56a919e9d173",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "etk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0f06fc190dd71269e",
            "arn": "arn:aws:ec2:us-east-1:935023237692:instance/i-07f8972577c936b7e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "ecsInstanceRole",
            "id": "i-07f8972577c936b7e",
            "instance_id": "i-07f8972577c936b7e",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "key_name": "tc2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0a28b76ae85cad4af",
            "private_dns": "ip-10-0-0-135.ec2.internal",
            "private_ip": "10.0.0.135",
            "public_dns": "ec2-52-72-96-62.compute-1.amazonaws.com",
            "public_ip": "52.72.96.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09415b3a3d5deafb1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d24c041a82a5a8e",
            "tags": {
              "Name": "etk-3-37 hud + QA1 (etk-3-37 cluster)",
              "Patch Group": "Default"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cff103b0bbf1f942"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:vpc/vpc-81f025f9",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-de5897b4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-009c2f79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-81f025f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-79c54b03",
            "owner_id": "935023237692"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c36b7bbc05ac4189",
            "association_id": "eipassoc-018c1b959a27fab06",
            "domain": "vpc",
            "id": "eipalloc-0c36b7bbc05ac4189",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05dcbc09101f2a530",
            "private_dns": "ip-10-1-0-56.ec2.internal",
            "private_ip": "10.1.0.56",
            "public_dns": "ec2-54-166-23-242.compute-1.amazonaws.com",
            "public_ip": "54.166.23.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073810f0efacb723d",
            "association_id": "eipassoc-055b55f57e8ccea09",
            "domain": "vpc",
            "id": "eipalloc-073810f0efacb723d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-099b355f239395ec4",
            "private_dns": "ip-10-2-0-23.ec2.internal",
            "private_ip": "10.2.0.23",
            "public_dns": "ec2-3-228-242-14.compute-1.amazonaws.com",
            "public_ip": "3.228.242.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054b4bad0ff89af39",
            "association_id": "eipassoc-075fa083da3a4ef1d",
            "domain": "vpc",
            "id": "eipalloc-054b4bad0ff89af39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0efb6e4cb49a42eaa",
            "private_dns": "ip-10-3-0-24.ec2.internal",
            "private_ip": "10.3.0.24",
            "public_dns": "ec2-18-205-91-86.compute-1.amazonaws.com",
            "public_ip": "18.205.91.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0998a8247e7408bb6",
            "association_id": "eipassoc-0d58ac283ca583093",
            "domain": "vpc",
            "id": "eipalloc-0998a8247e7408bb6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e7921955d6e9e0ab",
            "private_dns": "ip-10-4-0-41.ec2.internal",
            "private_ip": "10.4.0.41",
            "public_dns": "ec2-52-5-182-21.compute-1.amazonaws.com",
            "public_ip": "52.5.182.21",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03701e367fbd99df1",
            "arn": "arn:aws:ec2:us-east-1:935023237692:instance/i-0810e22ad4856ebfe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceRole",
            "id": "i-0810e22ad4856ebfe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "tc2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be960b6b9efa7be2",
            "private_dns": "i-0810e22ad4856ebfe.ec2.internal",
            "private_ip": "10.1.0.80",
            "public_dns": "ec2-3-81-224-230.compute-1.amazonaws.com",
            "public_ip": "3.81.224.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e638c868a3309fa8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c075f389ccabba82",
            "tags": {
              "Name": "etk-3-37 hud + QA1 (etk-3-37 cluster)"
            },
            "tags_all": {
              "Name": "etk-3-37 hud + QA1 (etk-3-37 cluster)"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04f2437bdeb3cdc16"
            ]
          },
          "dependencies": [
            "aws_ami_from_instance.etk",
            "aws_security_group.TerraformSecurityGroup",
            "aws_subnet.etk_subnets",
            "aws_vpc.vpcs",
            "data.aws_instance.etk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:internet-gateway/igw-097c44385af92090e",
            "id": "igw-097c44385af92090e",
            "owner_id": "935023237692",
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:internet-gateway/igw-0122d48cab0dc9a26",
            "id": "igw-0122d48cab0dc9a26",
            "owner_id": "935023237692",
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:internet-gateway/igw-03c50b5fabc3bfae0",
            "id": "igw-03c50b5fabc3bfae0",
            "owner_id": "935023237692",
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:internet-gateway/igw-07e399a5b1b1c8328",
            "id": "igw-07e399a5b1b1c8328",
            "owner_id": "935023237692",
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "epaBiEfile_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0998a8247e7408bb6",
            "connectivity_type": "public",
            "id": "nat-0cbb216f601f41d1b",
            "network_interface_id": "eni-0e7921955d6e9e0ab",
            "private_ip": "10.4.0.41",
            "public_ip": "52.5.182.21",
            "subnet_id": "subnet-0606e231463d40fc1",
            "tags": {
              "Name": "gw NAT{$var.VPCnames[3]}"
            },
            "tags_all": {
              "Name": "gw NAT{$var.VPCnames[3]}"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.epaBiEfile_subnets",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "epa_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054b4bad0ff89af39",
            "connectivity_type": "public",
            "id": "nat-03758cc964f988d49",
            "network_interface_id": "eni-0efb6e4cb49a42eaa",
            "private_ip": "10.3.0.24",
            "public_ip": "18.205.91.86",
            "subnet_id": "subnet-073d8b97e8ebfedf6",
            "tags": {
              "Name": "gw NAT{$var.VPCnames[2]}"
            },
            "tags_all": {
              "Name": "gw NAT{$var.VPCnames[2]}"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.epa_subnets",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "etk_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c36b7bbc05ac4189",
            "connectivity_type": "public",
            "id": "nat-0980629d774eb3b76",
            "network_interface_id": "eni-05dcbc09101f2a530",
            "private_ip": "10.1.0.56",
            "public_ip": "54.166.23.242",
            "subnet_id": "subnet-0167773502eb45532",
            "tags": {
              "Name": "gw NAT{$var.VPCnames[0]}"
            },
            "tags_all": {
              "Name": "gw NAT{$var.VPCnames[0]}"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.etk_subnets",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tc0_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073810f0efacb723d",
            "connectivity_type": "public",
            "id": "nat-0912db031a6d1a3a2",
            "network_interface_id": "eni-099b355f239395ec4",
            "private_ip": "10.2.0.23",
            "public_ip": "3.228.242.14",
            "subnet_id": "subnet-0a30c92c752c38971",
            "tags": {
              "Name": "gw NAT{$var.VPCnames[1]}"
            },
            "tags_all": {
              "Name": "gw NAT{$var.VPCnames[1]}"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.tc0_subnets",
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "epaBiEfile_route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-04dba890230ceb660",
            "id": "rtb-04dba890230ceb660",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0cbb216f601f41d1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": "pcx-0a651e4f59d2bc69b"
              }
            ],
            "tags": {
              "Name": "epa-bi-efileRt"
            },
            "tags_all": {
              "Name": "epa-bi-efileRt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.epaBiEfile_NAT",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "epaBiEfile_route-table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-030f7a5dd9bae9d4f",
            "id": "rtb-030f7a5dd9bae9d4f",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e399a5b1b1c8328",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0a651e4f59d2bc69b"
              }
            ],
            "tags": {
              "Name": "epa-bi-efilePubRt"
            },
            "tags_all": {
              "Name": "epa-bi-efilePubRt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "epa_route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-090cc7dc9f3fc628e",
            "id": "rtb-090cc7dc9f3fc628e",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03758cc964f988d49",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": "pcx-067ace03bebb9e97c"
              }
            ],
            "tags": {
              "Name": "epaRt"
            },
            "tags_all": {
              "Name": "epaRt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.epa_NAT",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "epa_route-table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-0e3fbb19a8a769af4",
            "id": "rtb-0e3fbb19a8a769af4",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c50b5fabc3bfae0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-067ace03bebb9e97c"
              }
            ],
            "tags": {
              "Name": "epaRtPub"
            },
            "tags_all": {
              "Name": "epaRtPub"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "etk_route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-03729af4aa6159fe5",
            "id": "rtb-03729af4aa6159fe5",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0980629d774eb3b76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": "pcx-0932fbd454c4cf25f"
              }
            ],
            "tags": {
              "Name": "etkRt"
            },
            "tags_all": {
              "Name": "etkRt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.etk_NAT",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "etk_route-table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-039f2f4e16044b434",
            "id": "rtb-039f2f4e16044b434",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097c44385af92090e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0932fbd454c4cf25f"
              }
            ],
            "tags": {
              "Name": "etkPubRt"
            },
            "tags_all": {
              "Name": "etkPubRt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tc0_route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-085e91cc08a3bc02d",
            "id": "rtb-085e91cc08a3bc02d",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0912db031a6d1a3a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": "pcx-041cfc19f95fa534e"
              }
            ],
            "tags": {
              "Name": "tc0Rt"
            },
            "tags_all": {
              "Name": "tc0Rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.tc0_NAT",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tc0_route-table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:route-table/rtb-01f4a8cf9326e89e9",
            "id": "rtb-01f4a8cf9326e89e9",
            "owner_id": "935023237692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0122d48cab0dc9a26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.0.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-041cfc19f95fa534e"
              }
            ],
            "tags": {
              "Name": "tc0PubRt"
            },
            "tags_all": {
              "Name": "tc0PubRt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "epaBiEfileRta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d0252edf9011e14",
            "route_table_id": "rtb-04dba890230ceb660",
            "subnet_id": "subnet-01be40ef17b6c07e4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.epaBiEfile_NAT",
            "aws_route_table.epaBiEfile_route-table",
            "aws_subnet.epaBiEfile_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068fa88e141727f7c",
            "route_table_id": "rtb-04dba890230ceb660",
            "subnet_id": "subnet-0e4dd6ac4640791d1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.epaBiEfile_NAT",
            "aws_route_table.epaBiEfile_route-table",
            "aws_subnet.epaBiEfile_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "epaBiEfileRta_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bfb35b8419c442d",
            "route_table_id": "rtb-030f7a5dd9bae9d4f",
            "subnet_id": "subnet-0606e231463d40fc1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.epaBiEfile_route-table_pub",
            "aws_subnet.epaBiEfile_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "epa_Rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0328b716abae219e9",
            "route_table_id": "rtb-090cc7dc9f3fc628e",
            "subnet_id": "subnet-03a8e77e4ef2dc077"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.epa_NAT",
            "aws_route_table.epa_route-table",
            "aws_subnet.epa_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d429454e237e4c5c",
            "route_table_id": "rtb-090cc7dc9f3fc628e",
            "subnet_id": "subnet-0893290af1415fcc3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.epa_NAT",
            "aws_route_table.epa_route-table",
            "aws_subnet.epa_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "epa_Rta_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0728f5675a7d2c83d",
            "route_table_id": "rtb-0e3fbb19a8a769af4",
            "subnet_id": "subnet-073d8b97e8ebfedf6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.epa_route-table_pub",
            "aws_subnet.epa_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "etk_Rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d61d23864159d791",
            "route_table_id": "rtb-03729af4aa6159fe5",
            "subnet_id": "subnet-0c075f389ccabba82"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.etk_NAT",
            "aws_route_table.etk_route-table",
            "aws_subnet.etk_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d43d763535fda6e6",
            "route_table_id": "rtb-03729af4aa6159fe5",
            "subnet_id": "subnet-0b325467e2f90a813"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.etk_NAT",
            "aws_route_table.etk_route-table",
            "aws_subnet.etk_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "etk_Rta_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f098c4cafffd358",
            "route_table_id": "rtb-039f2f4e16044b434",
            "subnet_id": "subnet-0167773502eb45532"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.etk_route-table_pub",
            "aws_subnet.etk_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tc0_Rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077a46acf1ef2df51",
            "route_table_id": "rtb-085e91cc08a3bc02d",
            "subnet_id": "subnet-0f1c70468eb27d2b3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.tc0_NAT",
            "aws_route_table.tc0_route-table",
            "aws_subnet.tc0_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de3ea44231aa640a",
            "route_table_id": "rtb-085e91cc08a3bc02d",
            "subnet_id": "subnet-0c4d64a1a516890a3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.tc0_NAT",
            "aws_route_table.tc0_route-table",
            "aws_subnet.tc0_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tc0_Rta_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d10675ec03a23a00",
            "route_table_id": "rtb-01f4a8cf9326e89e9",
            "subnet_id": "subnet-0a30c92c752c38971"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tc0_route-table_pub",
            "aws_subnet.tc0_subnets",
            "aws_vpc.vpcs",
            "aws_vpc_peering_connection.vpcPeering",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TerraformSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:security-group/sg-04f2437bdeb3cdc16",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f2437bdeb3cdc16",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "935023237692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:security-group/sg-0d1f1f197d25f1f51",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1f1f197d25f1f51",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "935023237692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:security-group/sg-0275558f151dc0c03",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0275558f151dc0c03",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "935023237692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:security-group/sg-09bbaa7208adcf7c0",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bbaa7208adcf7c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "935023237692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "epaBiEfile_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0606e231463d40fc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0606e231463d40fc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-epa-bi-efile-1"
            },
            "tags_all": {
              "Name": "subnet-epa-bi-efile-1"
            },
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-01be40ef17b6c07e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01be40ef17b6c07e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-epa-bi-efile-2"
            },
            "tags_all": {
              "Name": "subnet-epa-bi-efile-2"
            },
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0e4dd6ac4640791d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.4.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4dd6ac4640791d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-epa-bi-efile-3"
            },
            "tags_all": {
              "Name": "subnet-epa-bi-efile-3"
            },
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "epa_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-073d8b97e8ebfedf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073d8b97e8ebfedf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-epa-1"
            },
            "tags_all": {
              "Name": "subnet-epa-1"
            },
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-03a8e77e4ef2dc077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a8e77e4ef2dc077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-epa-2"
            },
            "tags_all": {
              "Name": "subnet-epa-2"
            },
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0893290af1415fcc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0893290af1415fcc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-epa-3"
            },
            "tags_all": {
              "Name": "subnet-epa-3"
            },
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "etk_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0167773502eb45532",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0167773502eb45532",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-etk-1"
            },
            "tags_all": {
              "Name": "subnet-etk-1"
            },
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0c075f389ccabba82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c075f389ccabba82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-etk-2"
            },
            "tags_all": {
              "Name": "subnet-etk-2"
            },
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0b325467e2f90a813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b325467e2f90a813",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-etk-3"
            },
            "tags_all": {
              "Name": "subnet-etk-3"
            },
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tc0_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0a30c92c752c38971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30c92c752c38971",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-tc0-1"
            },
            "tags_all": {
              "Name": "subnet-tc0-1"
            },
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0f1c70468eb27d2b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1c70468eb27d2b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-tc0-2"
            },
            "tags_all": {
              "Name": "subnet-tc0-2"
            },
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:subnet/subnet-0c4d64a1a516890a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4d64a1a516890a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935023237692",
            "private_dns_hostname_type_on_launch": "resource-name",
            "tags": {
              "Name": "subnet-tc0-3"
            },
            "tags_all": {
              "Name": "subnet-tc0-3"
            },
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "dependencies": [
            "aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:vpc/vpc-07735d1c264bf7a02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/24",
            "default_network_acl_id": "acl-0031166b040f6d61a",
            "default_route_table_id": "rtb-019a83cf84a53266e",
            "default_security_group_id": "sg-034d41216b2e001af",
            "dhcp_options_id": "dopt-009c2f79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07735d1c264bf7a02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019a83cf84a53266e",
            "owner_id": "935023237692",
            "tags": {
              "Name": "etkVPC"
            },
            "tags_all": {
              "Name": "etkVPC"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:vpc/vpc-0726a12201bc854e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/24",
            "default_network_acl_id": "acl-086cd4b2218b91df8",
            "default_route_table_id": "rtb-0209bbc106906268d",
            "default_security_group_id": "sg-08b0070d1adaf831e",
            "dhcp_options_id": "dopt-009c2f79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0726a12201bc854e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0209bbc106906268d",
            "owner_id": "935023237692",
            "tags": {
              "Name": "tc0VPC"
            },
            "tags_all": {
              "Name": "tc0VPC"
            }
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:vpc/vpc-01eb13cfb818d2843",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/24",
            "default_network_acl_id": "acl-07fb4c95503367618",
            "default_route_table_id": "rtb-0a571112797fceb23",
            "default_security_group_id": "sg-04bedf113c88e29c2",
            "dhcp_options_id": "dopt-009c2f79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01eb13cfb818d2843",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a571112797fceb23",
            "owner_id": "935023237692",
            "tags": {
              "Name": "epaVPC"
            },
            "tags_all": {
              "Name": "epaVPC"
            }
          }
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:935023237692:vpc/vpc-07f3f5bd4e7e57b26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/24",
            "default_network_acl_id": "acl-08b94a41add60b488",
            "default_route_table_id": "rtb-0d03de9dd8f205cf9",
            "default_security_group_id": "sg-0adeb40ef345e6113",
            "dhcp_options_id": "dopt-009c2f79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07f3f5bd4e7e57b26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d03de9dd8f205cf9",
            "owner_id": "935023237692",
            "tags": {
              "Name": "epa-bi-efileVPC"
            },
            "tags_all": {
              "Name": "epa-bi-efileVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpcPeering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0932fbd454c4cf25f",
            "peer_owner_id": "935023237692",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-81f025f9",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-07735d1c264bf7a02"
          },
          "dependencies": [
            "aws_vpc.vpcs",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-041cfc19f95fa534e",
            "peer_owner_id": "935023237692",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-81f025f9",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0726a12201bc854e0"
          },
          "dependencies": [
            "aws_vpc.vpcs",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-067ace03bebb9e97c",
            "peer_owner_id": "935023237692",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-81f025f9",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-01eb13cfb818d2843"
          },
          "dependencies": [
            "aws_vpc.vpcs",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0a651e4f59d2bc69b",
            "peer_owner_id": "935023237692",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-81f025f9",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-07f3f5bd4e7e57b26"
          },
          "dependencies": [
            "aws_vpc.vpcs",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}